# bank-statement-extractor

./: .gitignore  README.md  accounts_config.json  pyproject.toml  run.py
beancount_output/1220260127202601281624470040077/: card_1821.beancount  card_6591.beancount
beancount_output/1220260227202602281630400040299/: card_1821.beancount  card_6591.beancount
beancount_output/1220260327202603281719490040508/: card_1821.beancount  card_6591.beancount
beancount_output/1220260427202604281630070040730/: card_1821.beancount  card_6591.beancount
beancount_output/705259690_20260103/: card_cc.beancount
beancount_output/749358443_20260131_6158/: card_savings.beancount
beancount_output/749408168_20260131_2764/: card_savings.beancount
beancount_output/753994841_20260203/: card_cc.beancount
beancount_output/763818837_20260131_4596/: card_savings.beancount
beancount_output/771667920_20260131_3680/: card_savings.beancount
beancount_output/791348881_20260228_2764/: card_savings.beancount
beancount_output/792207295_20260228_6158/: card_savings.beancount
beancount_output/795944871_20260303/: card_cc.beancount
beancount_output/805681297_20260228_4596/: card_savings.beancount
beancount_output/809650010_20260228_3680/: card_savings.beancount
beancount_output/836576792_20260331_2764/: card_savings.beancount
beancount_output/836799267_20260331_6158/: card_savings.beancount
beancount_output/839312644_20260403/: card_cc.beancount
extractors/: __init__.py  base.py  cimb_cc.py  mbb_cc.py  mbb_savings.py
processors/: __init__.py  csv_to_beancount.py
(+3 files in other folders)
